--- a/aws-ansible/roles/ec2/vars/main.yml
+++ b/aws-ansible/roles/ec2/vars/main.yml
@@ -10,8 +10,8 @@ python_pkgs:
         - boto3
 
 sg_name: Allow_All_SG
-region_name: ap-south-1
+region_name: us-east-2
 subnet_name: subnet-6dfdc705
-ami_id: ami-0bcf5425cdc1d8a85
+ami_id: ami-0b9064170e32bde34
 keypair: ansible
-instance_flavour: t2.micro
+instance_flavour: t2.medium
